package data;

/*
 *  UCF COP3330 Fall 2021 Application Assignment 2 Solution
 *  Copyright 2021 Jacob Cordonero
 */

import java.util.ArrayList;
import java.util.List;

public class DataHandler {
    //1024 Items (will probably change to observable list
    private List<Item> list = new ArrayList<Item>();
    //holds save and load methods
    public void saveList() {

    }
    public void loadList() {

    }
    //other methods to access list values
    public boolean getList() {
        return false;
    }
    public void addItemToList() {

    }
    //uses Item.set(), return boolean
    public void editItemInList() {

    }
    public void deleteItemInList() {

    }
    public void deleteAllItemsInList() {

    }
}
